# whats-your-face

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clean_build  create_debug  create_release
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: simple-issue-template.md
app/: CMakeLists.txt  main.cpp
docs/: CONTRIBUTING.md  doxygen.cfg  index.html
docs/sphinx/: Makefile  conf.py  index.rst  make.bat
ml/: CMakeLists.txt  face.cpp  face.h  ml.cpp  ml.h
